--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
     "@angular/router":  "2.0.0-rc.1",
     "@angular/router-deprecated":  "2.0.0-rc.1",
     "@angular/upgrade":  "2.0.0-rc.1",
-
+    "ag-grid": "4.1.5",
+    "ag-grid-ng2": "4.1.3",
+    "angular2-jwt": "^0.1.14",
+    "font-awesome": "4.6.1",
+    "ng2-bs3-modal": "0.5.2",
     "systemjs": "0.19.27",
     "es6-shim": "^0.35.0",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
     "zone.js": "^0.6.12",
-
     "angular2-in-memory-web-api": "0.0.7",
     "bootstrap": "^3.3.6"
   },
