--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,16 +2,16 @@
 	// See http://go.microsoft.com/fwlink/?LinkId=733558
 	// for the documentation about the tasks.json format
 	"version": "0.1.0",
-	"command": "npm",
+	"command": "webpack",
 	"isShellCommand": true,
 	
 	"suppressTaskName": true,
 	"tasks": [
 		{
 			"taskName": "build",
-			"args": ["run", "tsc:w"],
+			"args": ["--watch"],
 			"showOutput": "always"
 		}
-		
 	]
 }
+
