--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,14 +2,14 @@
 	// See http://go.microsoft.com/fwlink/?LinkId=733558
 	// for the documentation about the tasks.json format
 	"version": "0.1.0",
-	"command": "webpack",
+	"command": "npm",
 	"isShellCommand": true,
 	
 	"suppressTaskName": true,
 	"tasks": [
 		{
 			"taskName": "build",
-			"args": ["--watch"],
+			"args": ["start"],
 			"showOutput": "always"
 		}
 	]
