--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "es6-shim": "^0.35.0",
     "font-awesome": "4.6.1",
     "ng2-bs3-modal": "0.6.0",
+    "primeng": "^1.0.0-beta.6",
+    "primeui": "^4.1.11",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "0.19.27",
