--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "bootstrap": "^3.3.6",
     "es6-shim": "^0.35.0",
     "font-awesome": "4.6.1",
-    "primeng": "1.0.0-beta.6",
+    "primeng": "^1.0.0-beta.6",
     "primeui": "^4.1.11",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
